// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components Header 1`] = `
<div
  className="layout layoutAuto"
>
  <div
    className="grid col-12"
  >
    <div
      className="grid grid--stretch col-12 gridStretch"
    >
      <div
        className="col-2"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            Go Back
          </div>
        </div>
      </div>
      <div
        className="col-6"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            <h2>
              Page Title
            </h2>
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            Action 1
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            Action 2
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="grid col-10"
      >
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              1
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              2
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              3
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              4
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              5
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              6
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            B
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Pagination 1`] = `
<div
  className="layout layoutStretch"
>
  <div
    className="grid gridRoot col-12"
  >
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          &lt;
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          1
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box2"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          ...
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          5
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          6
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          7
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          8
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          9
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          10
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box2"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          ...
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          20
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          &gt;
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Auto Flow 1`] = `
<div
  className="layout layoutAuto"
>
  <div
    className="grid grid--stretch col-12 gridStretch"
  >
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          A
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box2"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          B
        </div>
      </div>
    </div>
    <div
      className="col-4"
    >
      <div
        className="box3"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="col-3"
    >
      <div
        className="box4"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          D
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box5"
        style={
          Object {
            "height": 100,
          }
        }
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          E
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          A
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box2"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          B
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box3"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box4"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          D
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box5"
        style={Object {}}
      >
        <div
          className="grid gridMiddle gridCenter col-12"
        >
          E
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Fraction 1`] = `
<div
  className="layout layoutStretch"
>
  <div
    className="grid gridRoot col-12"
  >
    <h1>
      Auto Size
    </h1>
    <div
      className="grid col-12"
    />
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 1
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 2
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 2
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 3
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 3
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 3
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 4
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 4
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 4
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 4
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 5
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 5
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 5
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 5
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 5
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 6
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 7
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1 / 8
          </div>
        </div>
      </div>
    </div>
    <h1>
      8 - auto
    </h1>
    <div
      className="grid col-12"
    >
      <div
        className="col-8"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            12 - 8 = 4
          </div>
        </div>
      </div>
    </div>
    <h1>
      6 - 1/2 - 1/2
    </h1>
    <div
      className="grid col-12"
    >
      <div
        className="col-6"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            (12 - 6) / 2 = 3
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            (12 - 6) / 2 = 3
          </div>
        </div>
      </div>
    </div>
    <h1>
      Custom
    </h1>
    <div
      className="grid col-12"
    />
    <div
      className="grid col-12"
    >
      <div
        className="col-6"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            6 (fixed)
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Horizontal Align 1`] = `
<div
  className="layout layoutStretch"
>
  <div
    className="grid gridRoot col-12"
  >
    <div
      className="grid gridLeft col-12"
    >
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            LEFT
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid gridCenter col-12"
    >
      <div
        className="col-2"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            CENTER
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid gridRight col-12"
    >
      <div
        className="col-2"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            RIGHT
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-2"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            DEFAULT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Nested 1`] = `
<div
  className="layout layoutStretch"
>
  <div
    className="grid gridRoot col-12"
  >
    <div
      className="grid col-12"
    >
      <div
        className="grid col-6"
      >
        <div
          className="box1 grid noBottom"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            <div
              className="col-6"
            >
              <div
                className="box3"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  C
                </div>
              </div>
            </div>
            <div
              className="col-6"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  D
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="grid col-6"
      >
        <div
          className="box2 grid noBottom"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            <div
              className="col-3"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  D
                </div>
              </div>
            </div>
            <div
              className="colOffset-6 col-3"
            >
              <div
                className="box5"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  E
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="grid col-6"
      >
        <div
          className="box1 grid noBottom"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            <div
              className="colOffset-3 col-6"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  D
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="grid col-6"
      >
        <div
          className="box2 grid noBottom"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            <div
              className="col-4"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  D
                </div>
              </div>
            </div>
            <div
              className="colOffset-4 col-4"
            >
              <div
                className="box5"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  E
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="grid col-6"
      >
        <div
          className="box2 grid noBottom"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            <div
              className="col-1"
            >
              <div
                className="box1"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  1
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box2"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  2
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box3"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  3
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  4
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box5"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  5
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box1"
                style={Object {}}
              >
                <div
                  className="grid gridMiddle gridCenter col-12"
                >
                  6
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Offset 1`] = `
<div
  className="layout layoutStretch"
>
  <div
    className="grid gridRoot col-12"
  >
    <div
      className="grid col-12"
    >
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +0
          </div>
        </div>
      </div>
      <div
        className="colOffset-7 col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +7
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="colOffset-1 col-1"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +1
          </div>
        </div>
      </div>
      <div
        className="colOffset-5 col-1"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +5
          </div>
        </div>
      </div>
      <div
        className="colOffset-1 col-1"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +1
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="colOffset-2 col-1"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +2
          </div>
        </div>
      </div>
      <div
        className="colOffset-3 col-1"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +3
          </div>
        </div>
      </div>
      <div
        className="colOffset-3 col-1"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +3
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="colOffset-3 col-1"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +3
          </div>
        </div>
      </div>
      <div
        className="colOffset-1 col-1"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +1
          </div>
        </div>
      </div>
      <div
        className="colOffset-5 col-1"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +5
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="colOffset-4 col-1"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +4
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            +0
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Sizing 1`] = `
<div
  className="layout layoutStretch"
>
  <div
    className="grid gridRoot col-12"
  >
    <div
      className="grid col-12"
    >
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            1
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            2
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-3"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            3
          </div>
        </div>
      </div>
      <div
        className="col-3"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            3
          </div>
        </div>
      </div>
      <div
        className="col-3"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            3
          </div>
        </div>
      </div>
      <div
        className="col-3"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            3
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-4"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            4
          </div>
        </div>
      </div>
      <div
        className="col-4"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            4
          </div>
        </div>
      </div>
      <div
        className="col-4"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-6"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            6
          </div>
        </div>
      </div>
      <div
        className="col-6"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            6
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            Auto
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-12"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            12
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Vertical Align 1`] = `
<div
  className="layout layoutStretch"
>
  <div
    className="grid gridRoot col-12"
  >
    <h1>
      Item Align
    </h1>
    <div
      className="grid col-12"
    >
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={
            Object {
              "height": 300,
            }
          }
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
             
          </div>
        </div>
      </div>
      <div
        className="colTop col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            TOP
          </div>
        </div>
      </div>
      <div
        className="colMiddle col-2"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            MIDDLE
          </div>
        </div>
      </div>
      <div
        className="colBottom col-2"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            BOTTOM
          </div>
        </div>
      </div>
      <div
        className="colMiddle col-2"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            MIDDLE
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            DEFAULT
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={
            Object {
              "height": 300,
            }
          }
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
             
          </div>
        </div>
      </div>
    </div>
    <h1>
      Grid Align
    </h1>
    <div
      className="grid col-12"
    >
      <div
        className="grid gridTop col-4"
        style={
          Object {
            "height": 300,
          }
        }
      >
        <div
          className="col-12"
        >
          <div
            className="box3"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              TOP
            </div>
          </div>
        </div>
      </div>
      <div
        className="grid gridMiddle col-4"
        style={
          Object {
            "height": 300,
          }
        }
      >
        <div
          className="col-12"
        >
          <div
            className="box3"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              MIDDLE
            </div>
          </div>
        </div>
      </div>
      <div
        className="grid gridBottom col-4"
        style={
          Object {
            "height": 300,
          }
        }
      >
        <div
          className="col-12"
        >
          <div
            className="box3"
            style={Object {}}
          >
            <div
              className="grid gridMiddle gridCenter col-12"
            >
              BOTTOM
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Holy Grail 1`] = `
<div
  className="layout holyGrail layoutFit"
>
  <div
    className="layout header layoutAuto"
  >
    <div
      className="grid gridRoot col-12"
    >
      <h1>
        Header
      </h1>
    </div>
  </div>
  <div
    className="layout layoutStretch"
  >
    <div
      className="layout layoutStretch"
    >
      <div
        className="grid gridRoot col-12"
      >
        <div
          className="grid nav col-2"
        >
          <h2>
            Nav
          </h2>
        </div>
        <div
          className="grid content gridTop col-8"
        >
          <h2>
            Content
          </h2>
        </div>
        <div
          className="grid ads col-2"
        >
          <h2>
            Ads
          </h2>
        </div>
      </div>
    </div>
    <div
      className="layout footer layoutAuto"
    >
      <div
        className="grid gridRoot col-12"
      >
        <h1>
          Footer
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Stack 1`] = `
<div
  className="layout layoutStretch"
  root={true}
>
  <div
    className="layout layoutAuto"
  >
    <div
      className="grid noMargin col-12"
    >
      <div
        className="col-12"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid gridMiddle gridCenter col-12"
          >
            Section 1
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout layoutStretch"
  >
    <div>
      <h1>
        SubSection 
        1
      </h1>
    </div>
    <div>
      <h1>
        SubSection 
        2
      </h1>
    </div>
    <div>
      <h1>
        SubSection 
        3
      </h1>
    </div>
  </div>
</div>
`;
